--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First Website</title>
+<meta name="google-site-verification" content="XXXXXXXXXXXX" />
 </head>
+    
 <body>
     <h1>Welcome to My Website</h1>
     <p>This website is hosted using GitHub Pages.</p>
